# lane_detection_package

./: CMakeLists.txt  README.md  package.xml
config/: sliding_box_ld.yaml
dev/: sliding_box_ld.py  sliding_box_ld_vid.py
launch/: sliding_box_ld_launch.py
src/: sliding_box_ld.cpp  sliding_box_ld.h
